// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[` 1`] = `
<DocumentFragment>
  .emotion-0 {
  background-color: #DADDE2;
  border-bottom-color: #828487;
  color: #1B2029;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  justify-content: space-between;
  overflow: auto;
  word-break: break-word;
  padding: 16px;
  padding-bottom: 0;
  margin-bottom: 0;
  font-size: 12px;
  font-weight: 500;
  border-radius: 6px;
}

.emotion-1 {
  padding-bottom: 16px;
}

.emotion-2 {
  cursor: pointer;
  line-height: 0;
  opacity: 0.5;
  cursor: pointer;
}

.emotion-3 {
  vertical-align: middle;
  fill: #1B2029;
}

.emotion-3 use {
  pointer-events: none;
}

<div
    aria-live="polite"
    class="emotion-0"
    data-cy="infoBox"
    role="log"
  >
    <div
      class="emotion-1"
    >
      message
    </div>
    <span
      class="emotion-2"
      role="button"
      tabindex="0"
    >
      <svg
        aria-label="system-close icon"
        class="emotion-3"
        data-cy="icon"
        height="16"
        preserveAspectRatio="xMinYMin meet"
        role="img"
        viewBox="0 0 16 16"
        width="16"
      >
        <use
          xlink:href="#system-close"
        />
      </svg>
    </span>
  </div>
</DocumentFragment>
`;

exports[`InfoBox InfoBoxBanner renders default 1`] = `
<DocumentFragment>
  .emotion-0 {
  background-color: #DADDE2;
  border-bottom-color: #828487;
  color: #1B2029;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  justify-content: space-between;
  overflow: auto;
  word-break: break-word;
  padding: 16px;
  padding-bottom: 0;
  margin-bottom: 0;
  font-size: 12px;
  font-weight: 500;
  border-bottom-width: 1px;
  border-bottom-style: solid;
}

.emotion-1 {
  padding-bottom: 16px;
}

.emotion-2 {
  cursor: pointer;
  line-height: 0;
  opacity: 0.5;
  cursor: pointer;
}

.emotion-3 {
  vertical-align: middle;
  fill: #1B2029;
}

.emotion-3 use {
  pointer-events: none;
}

<div
    aria-live="polite"
    class="emotion-0"
    data-cy="infoBox"
    role="log"
  >
    <div
      class="emotion-1"
    >
      message
    </div>
    <span
      class="emotion-2"
      role="button"
      tabindex="0"
    >
      <svg
        aria-label="system-close icon"
        class="emotion-3"
        data-cy="icon"
        height="16"
        preserveAspectRatio="xMinYMin meet"
        role="img"
        viewBox="0 0 16 16"
        width="16"
      >
        <use
          xlink:href="#system-close"
        />
      </svg>
    </span>
  </div>
</DocumentFragment>
`;

exports[`InfoBox renders default 1`] = `
<DocumentFragment>
  .emotion-0 {
  background-color: #DADDE2;
  border-bottom-color: #828487;
  color: #1B2029;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  justify-content: space-between;
  overflow: auto;
  word-break: break-word;
  padding: 16px;
  padding-bottom: 0;
  margin-bottom: 0;
  font-size: 12px;
  font-weight: 500;
}

.emotion-1 {
  padding-bottom: 16px;
}

.emotion-2 {
  cursor: pointer;
  line-height: 0;
  opacity: 0.5;
  cursor: pointer;
}

.emotion-3 {
  vertical-align: middle;
  fill: #1B2029;
}

.emotion-3 use {
  pointer-events: none;
}

<div
    aria-live="polite"
    class="emotion-0"
    data-cy="infoBox"
    role="log"
  >
    <div
      class="emotion-1"
    >
      message
    </div>
    <span
      class="emotion-2"
      role="button"
      tabindex="0"
    >
      <svg
        aria-label="system-close icon"
        class="emotion-3"
        data-cy="icon"
        height="16"
        preserveAspectRatio="xMinYMin meet"
        role="img"
        viewBox="0 0 16 16"
        width="16"
      >
        <use
          xlink:href="#system-close"
        />
      </svg>
    </span>
  </div>
</DocumentFragment>
`;

exports[`InfoBox renders with JSX message 1`] = `
<DocumentFragment>
  .emotion-0 {
  background-color: #DADDE2;
  border-bottom-color: #828487;
  color: #1B2029;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  justify-content: space-between;
  overflow: auto;
  word-break: break-word;
  padding: 16px;
  padding-bottom: 0;
  margin-bottom: 0;
  font-size: 12px;
  font-weight: 500;
}

.emotion-1 {
  padding-bottom: 16px;
}

.emotion-2 {
  cursor: pointer;
  line-height: 0;
  opacity: 0.5;
  cursor: pointer;
}

.emotion-3 {
  vertical-align: middle;
  fill: #1B2029;
}

.emotion-3 use {
  pointer-events: none;
}

<div
    aria-live="polite"
    class="emotion-0"
    data-cy="infoBox"
    role="log"
  >
    <div
      class="emotion-1"
    >
      <span>
        message
      </span>
    </div>
    <span
      class="emotion-2"
      role="button"
      tabindex="0"
    >
      <svg
        aria-label="system-close icon"
        class="emotion-3"
        data-cy="icon"
        height="16"
        preserveAspectRatio="xMinYMin meet"
        role="img"
        viewBox="0 0 16 16"
        width="16"
      >
        <use
          xlink:href="#system-close"
        />
      </svg>
    </span>
  </div>
</DocumentFragment>
`;

exports[`InfoBox renders with actions 1`] = `
<DocumentFragment>
  .emotion-0 {
  background-color: #DADDE2;
  border-bottom-color: #828487;
  color: #1B2029;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  justify-content: space-between;
  overflow: auto;
  word-break: break-word;
  padding: 16px;
  padding-bottom: 0;
  margin-bottom: 0;
  font-size: 12px;
  font-weight: 500;
}

.emotion-1 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-box-flex-wrap: wrap;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
}

.emotion-2 {
  padding-bottom: 16px;
}

.emotion-3 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  margin-left: auto;
  padding-bottom: 16px;
}

.emotion-4 {
  -webkit-order: 1;
  -ms-flex-order: 1;
  order: 1;
  padding-left: 16px;
}

.emotion-5 {
  cursor: pointer;
}

.emotion-6 {
  padding-left: 16px;
}

.emotion-8 {
  cursor: pointer;
  line-height: 0;
  opacity: 0.5;
  cursor: pointer;
}

.emotion-9 {
  vertical-align: middle;
  fill: #1B2029;
}

.emotion-9 use {
  pointer-events: none;
}

<div
    aria-live="polite"
    class="emotion-0"
    data-cy="infoBox"
    role="log"
  >
    <div
      class="emotion-1"
    >
      <div
        class="emotion-2"
      >
        message
      </div>
      <div
        class="emotion-3"
        data-cy="infoBox-actions"
      >
        <span
          class="emotion-4"
        >
          <span
            class="emotion-5"
            role="button"
            style="cursor: pointer; color: rgb(125, 88, 255);"
            tabindex="0"
          >
            Primary Action
          </span>
        </span>
        <span
          class="emotion-6"
        >
          <span
            class="emotion-5"
            role="button"
            style="cursor: pointer; color: rgb(125, 88, 255);"
            tabindex="0"
          >
            Secondary Action
          </span>
        </span>
      </div>
    </div>
    <span
      class="emotion-8"
      role="button"
      tabindex="0"
    >
      <svg
        aria-label="system-close icon"
        class="emotion-9"
        data-cy="icon"
        height="16"
        preserveAspectRatio="xMinYMin meet"
        role="img"
        viewBox="0 0 16 16"
        width="16"
      >
        <use
          xlink:href="#system-close"
        />
      </svg>
    </span>
  </div>
</DocumentFragment>
`;

exports[`InfoBox renders without dismiss button 1`] = `
<DocumentFragment>
  .emotion-0 {
  background-color: #DADDE2;
  border-bottom-color: #828487;
  color: #1B2029;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  justify-content: space-between;
  overflow: auto;
  word-break: break-word;
  padding: 16px;
  padding-bottom: 0;
  margin-bottom: 0;
  font-size: 12px;
  font-weight: 500;
}

.emotion-1 {
  padding-bottom: 16px;
}

<div
    aria-live="polite"
    class="emotion-0"
    data-cy="infoBox"
    role="log"
  >
    <div
      class="emotion-1"
    >
      message
    </div>
  </div>
</DocumentFragment>
`;
